--- a/eptacss/src/App.css
+++ b/eptacss/src/App.css
@@ -10,8 +10,8 @@
 }
 
 .App-logo {
-  position: top;
-  top: 0;
+  margin-top: 20%;
+  margin-bottom: 0%;
   height: 16vmin;
   pointer-events: none;
 }
@@ -65,23 +65,27 @@
 .title {
   display: flex;
   justify-content: center;
+  height: 20%;
 }
 
 .description {
-  width: 30%;
+  width: 100%;
   /* margin: 5%; */
   margin: 5rem 0;
-  font-weight: 600;
+  font-size: larger ;
+  font-weight: 500;
   text-align: center;
+
 }
 
-/* .grid {
+.grid.card {
   display: grid;
+  height: 40%;
   grid-template-columns: repeat(4, minmax(25%, auto));
   width: 180vh;
   text-align: center;
   margin-bottom: 5%;
-} */
+}
 
 /* cards */
 .card {
@@ -140,37 +144,51 @@
   cursor: pointer;
 }
 
-/* 
 @media (max-width: 700px) {
+  .App-logo {
+    margin-top: 60%;
+    height: 80px;
+  }
+  .description {
+    width: 85%;
+    font-weight: 600;
+    font-size: medium;
+  }
+  .title {
+    height: 25%;
+  }
+
   .content {
     padding: 4rem;
   }
 
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
+  .grid.cards {
+    flex-direction: column;
+    margin-bottom: 0px;
     text-align: center;
+    align-items: center;
+    justify-content: space-around;
+    margin-bottom: 20%;
   }
-
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
   .center {
     padding: 8rem 0 6rem;
   }
-} */
+  .footerOptions {
+    flex-direction: column;
+  }
+  .ButtonFooterOptions {
+    padding-bottom: 30px;
+  }
+  .footer {
+    background-color: transparent;
+  }
+}
 
 footer {
-  height: 30px;
+  /* height: 2px; */
   width: 100%;
   background-color: rgb(0, 93, 193);
-
+  height: 30px;
   position: absolute;
   bottom: 0;
 }
@@ -179,9 +197,22 @@ footer {
   height: 10vh;
   display: flex;
   margin-bottom: 30px;
-
   justify-content: space-between;
   align-items: center;
-
   padding: 0 22px;
+}
+
+.ButtonFooterOptions {
+  color: #00a3ff;
+  background-color: #ffffff;
+  font-family: 'Inter';
+  font-size: medium;
+  font-weight: 700;
+  text-decoration: underline;
+  transition-duration: 0.3s;
+}
+.ButtonFooterOptions:hover {
+  color: #0073ff;
+  transition-duration: 0.3s;
+  cursor: pointer;
 }
