--- a/eptacss/src/App.css
+++ b/eptacss/src/App.css
@@ -91,13 +91,12 @@
 .card {
   padding: 1.5rem;
   width: 19.8ch;
-  border-radius: 33px;
+  border-radius: 7px;
   background: rgba(var(--card-rgb), 0);
-  border: 3px solid;
-  border-color: #7fcefb;
+  border: 1px solid;
+  border-color: #c1c1c1;
   /* transition: background 200ms, border 200ms; */
   text-align: center;
-  box-shadow: 0px 4px 4px 2px #c1c1c1;
   justify-content: space-between;
 }
 .cardTitle {
@@ -126,10 +125,10 @@
 }
 .accessButton {
   color: #ffffff;
-  background-color: #00a3ff;
+  background-color: #00a2ff;
   font-size: 1rem;
   font-weight: 600;
-  width: 100%;
+  width: 50%;
   height: 25%;
   border: 2px;
   border-radius: 8px;
