--- a/eptacss/src/App.css
+++ b/eptacss/src/App.css
@@ -3,18 +3,11 @@
   flex-direction: column;
 
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
 
-  height: 100vh;
   position: relative;
 }
 
-.App-logo {
-  margin-top: 20%;
-  margin-bottom: 0%;
-  height: 16vmin;
-  pointer-events: none;
-}
 
 /* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -33,6 +26,22 @@
   /* color: rgb(45, 45, 45); */
 }
 
+.header{
+  width: 100vw;
+  background-color: #0073ff;
+  height: 90px;
+}
+
+
+.App-logo {
+  margin-top: 0%;
+  margin-bottom: 10%;
+  height: 45vh;
+  pointer-events: none;
+}
+
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -50,58 +59,80 @@
   /* justify-content: center; */
   /* align-items: center; */
 
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+
   /* display: flex; */
   height: 100%;
 
   width: 100%;
 }
 
-.grid.cards {
-  display: flex;
-  justify-content: space-evenly;
+.container.second {
+  background-image: linear-gradient(to right, blue, rgb(0, 149, 255));
+  
 }
 
-.title {
+.grid.cards {
   display: flex;
+  flex-flow: row wrap;
+  width: 90%;
+  justify-content: space-around;
+  /* justify-content: space-evenly;
+  height: 35%; */
+}
+
+.grid.minicards{
+  display: flex;
+  text-align: center;
+  width: 50%;
+  justify-content: space-around;
+  /* background-color: #0073ff; */
+}
+.grid.extracards{
+  display: flex;
+  text-align: center;
+  width: 50%;
+  justify-content: space-around;
+  /* background-color: #0073ff; */
+}
+
+
+
+.title {
+  display: grid;
   justify-content: center;
   height: 20%;
 }
-
 .description {
-  width: 100%;
-  /* margin: 5%; */
-  margin: 5rem 0;
-  font-size: larger ;
+  font-size: larger;
   font-weight: 500;
   text-align: center;
-
+  margin-bottom: 30px;
+}
+.subtitle {
+  text-align: center;
 }
 
-.grid.card {
+.subtitle.second{
+  height: 30vh;
+  justify-content: end;
+  align-items: center;
+}
+/* .grid.card {
   display: grid;
-  height: 40%;
+  height: 60%;
   grid-template-columns: repeat(4, minmax(25%, auto));
   width: 180vh;
   text-align: center;
   margin-bottom: 5%;
-}
+} */
 
 /* cards */
-.card {
-  padding: 1.5rem;
-  width: 19.8ch;
-  border-radius: 7px;
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid;
-  border-color: #c1c1c1;
-  /* transition: background 200ms, border 200ms; */
-  text-align: center;
-  justify-content: space-between;
-}
+
 .cardTitle {
   margin-top: 0;
-  font-size: 1.5rem;
+  font-size: 0.5rem;
   font-weight: 650;
   text-align: left;
   margin-left: 2%;
@@ -122,25 +153,6 @@
   margin-right: 2%;
   margin-bottom: 0%;
   height: 50%;
-}
-.accessButton {
-  color: #ffffff;
-  background-color: #00a2ff;
-  font-size: 1rem;
-  font-weight: 600;
-  width: 50%;
-  height: 25%;
-  border: 2px;
-  border-radius: 8px;
-  border-color: #f3f2f2;
-  transition-duration: 0.5s;
-  box-shadow: 0px 4px 4px 2px #e0e0e0;
-  margin-bottom: 5%;
-}
-.accessButton:hover {
-  transition-duration: 0.5s;
-  background-color: rgb(0, 93, 193);
-  cursor: pointer;
 }
 
 @media (max-width: 700px) {
@@ -163,6 +175,7 @@
 
   .grid.cards {
     flex-direction: column;
+
     margin-bottom: 0px;
     text-align: center;
     align-items: center;
