--- a/eptacss/src/components/Extracard/index.css
+++ b/eptacss/src/components/Extracard/index.css
@@ -1,7 +1,7 @@
 
 .card.epta {
-  display: grid;
-  grid-template-columns: repeat(2, 15% 85%);
+  display: flex;
+  /* grid-template-columns: repeat(2, 15% 85%); */
   margin: 2%;
   padding: 1rem;
   width: 19.8ch;
@@ -10,16 +10,16 @@
   border: 1px solid;
   border-color: #c1c1c1;
     /* transition: background 200ms, border 200ms; */
-  text-align: left;
+  text-align: center;
   justify-content: space-between;
   width: 50vh;
   height: 80vh;
   background-color: #ffffff;
-
 }
+
 .card.eventos {
-  display: grid;
-  grid-template-columns: repeat(2, 15% 85%);
+  display: flex;
+  /* grid-template-columns: repeat(2, 15% 85%); */
   margin: 2%;
   padding: 1rem;
   width: 19.8ch;
@@ -28,7 +28,7 @@
   border: 1px solid;
   border-color: #c1c1c1;
     /* transition: background 200ms, border 200ms; */
-  text-align: left;
+  text-align: center;
   justify-content: space-between;
   width: 50vh;
   height: 80vh;
@@ -66,16 +66,34 @@
   padding-left: 5%;
   width: 100%;
   height: 100%;
-  margin: 0%
-
+  margin: 0%;
+  /* background-color: #c1c1c1; */
 }
+
 .cardTitle{
   font-size: 18px;
   color: rgb(36, 36, 36);
 }
+.cardTitle.epta{
+  font-size: 40px;
+  color: rgb(36, 36, 36);
+}
+.cardTitle.eventos{
+  font-size: 40px;
+  color: rgb(36, 36, 36);
+}
+
 .cardSubtitle{
   font-size: 13px;
 }
+.cardSubtitle.epta{
+  font-size: 18px;
+}
+.cardSubtitle.eventos{
+  font-size: 18px;
+}
+
+
 .accessButton{
   background-color:  rgb(160, 206, 255) ;
   color:  rgb(0, 93, 193);
@@ -98,6 +116,11 @@
   background-color: rgb(47, 148, 255);
   color: #ffffff;
   cursor: pointer;
+}
+
+.accessButton.epta{
+  font-size: 23px;
+  max-height: 70px;
 }
 
 
