--- a/eptacss/src/index.css
+++ b/eptacss/src/index.css
@@ -14,7 +14,12 @@ body {
   font-family: 'Inter', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
+::-webkit-scrollbar {
+  width: 0px;
+}
+
 
 /* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
