--- a/eptacss/src/App.css
+++ b/eptacss/src/App.css
@@ -7,27 +7,24 @@
 
   position: relative;
 }
-
-/* @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-} */
-
-
-.header {
-  width: 100vw;
+/* .header {
+  position: absolute;
   background-color: #0073ff;
   height: 90px;
-}
-
+} */
 .App-logo {
   margin-top: 0%;
   margin-bottom: 10%;
-  height: 45vh;
+  height: auto;
+  max-width: 100%;
+  height: 70%;
   pointer-events: none;
+  background-color: #e1e1e1;
+  justify-content: left;
+  padding: 13%; 
+  padding-top: 0%;
+  padding-bottom: 0%;
 }
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -38,54 +35,63 @@
 }
 
 .container {
-  /* background-color: red; */
-  /* padding: 0px 1rem; */
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
-  /* align-items: center; */
-
   justify-content: center;
   align-items: center;
-
-  /* display: flex; */
+  margin-top: 0;
+  padding-top: 0;
   height: 100%;
-
   width: 100%;
+  padding-bottom: 5%;
 }
 
 .container.second {
-  background-image: linear-gradient(to right, blue, rgb(30, 176, 255));
+  background-image: linear-gradient(
+    to right,
+    rgb(0, 43, 216),
+    rgb(0, 166, 255)
+  );
+  height: 75vh;
+  padding-top: 5%;
+  padding-bottom: 0%;
+  max-width: 100%;
+}
+.container.third {
+  padding-top: 10%;
+  height: 80vh;
+  max-width: 100%;
 }
 
 .grid.cards {
   display: flex;
   flex-flow: row wrap;
-  width: 90%;
-  justify-content: space-around;
+  width: 75%;
+  justify-content: space-between;
   /* justify-content: space-evenly;
   height: 35%; */
 }
-
 .grid.minicards {
   display: flex;
   text-align: center;
-  width: 50%;
+  width: 70%;
   justify-content: space-around;
   /* background-color: #0073ff; */
 }
 .grid.extracards {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(2, 50%);
   text-align: center;
-  width: 50%;
-  justify-content: space-around;
+  width: 60%;
+  height: 70vh;
+  justify-content: space-between;
   /* background-color: #0073ff; */
 }
 
 .title {
   display: grid;
   justify-content: center;
-  height: 20%;
+  height: 10%;
 }
 .description {
   font-size: larger;
@@ -93,12 +99,13 @@
   text-align: center;
   margin-bottom: 30px;
 }
+
 .subtitle {
   text-align: center;
+  margin-bottom: 2%;
 }
-
 .subtitle.second {
-  height: 30vh;
+  height: 10vh;
   justify-content: end;
   align-items: center;
 }
