--- a/eptacss/src/components/Infocard/index.css
+++ b/eptacss/src/components/Infocard/index.css
@@ -1,20 +1,19 @@
 
-.card {
+.card.info{
   display: grid;
   grid-template-columns: repeat(2, 15% 85%);
   margin: 2%;
   padding: 1rem;
-  width: 19.8ch;
-  border-radius: 7px;
+  border-radius: 12px;
   background: rgba(var(--card-rgb), 0);
   border: 1px solid;
-  border-color: #d2d2d2;
+  border-color: #c1c1c1;
     /* transition: background 200ms, border 200ms; */
   text-align: left;
   justify-content: space-between;
-  width: 44vh;
-  height: 22vh;
+  height: 10vh;
 }
+
 .icone1{
   background-color: rgb(0, 93, 193);
   color: #f3f2f2;
@@ -39,19 +38,30 @@
 
 
 }
-.content{
-  padding-left: 5%;
+.content.info{
+  padding-left: 0%;
   width: 100%;
   height: 100%;
-  margin: 0%
+  margin: 0%;
+  justify-content: space-between;
 
 }
-.cardTitle{
-  font-size: 18px;
-  color: rgb(36, 36, 36);
+.day{
+  font-size: x-large;
+  font-weight: 600;
 }
-.cardSubtitle{
+
+.cardTitle.info{  
+  text-align: left;
+  font-size: 17px;
+  color: rgb(36, 36, 36);
+  height: auto;
+
+}
+.cardSubtitle.info{
   font-size: 13px;
+  color: #7a7a7a;
+  height: auto;
 }
 .accessButton{
   background-color:  rgb(160, 206, 255) ;
