--- a/eptacss/src/components/Minicard/index.css
+++ b/eptacss/src/components/Minicard/index.css
@@ -1,64 +1,52 @@
 
-.card {
-  display: grid;
-  grid-template-columns: repeat(2, 15% 85%);
+.card.mini{
+  display: table-column;
+  background-color: #ffffff;
   margin: 2%;
-  padding: 1rem;
-  width: 19.8ch;
+  width: 20%;
   border-radius: 7px;
   background: rgba(var(--card-rgb), 0);
   border: 1px solid;
   border-color: #c1c1c1;
     /* transition: background 200ms, border 200ms; */
-  text-align: left;
-  justify-content: space-between;
-  height: 22vh;
-}
-.icone1{
-  background-color: rgb(0, 93, 193);
-  color: #f3f2f2;
-  width: 100%;
-  height: 100%;
-  border-radius: 11px;
-
-}
-.iconsCard{
-  /* background-color: rgb(0, 93, 193);
-  width: 100%;
-  height: 23%;
-  margin: 0%;
   text-align: center;
-  padding-top: 30%;
-  border-radius: 20px; */
-  padding: 8px;
-  background-color:rgb(0, 93, 193) ;
-  width: 90%;
-  height: 30%;
-  border-radius: 20px;
-
-
+  align-items: center;
+  justify-content: space-between;
+  height: 60%;
 }
-.content{
-  padding-left: 5%;
+
+.content.mini{
+  justify-content: space-between;
+  padding-left: 0%;
   width: 100%;
   height: 100%;
-  margin: 0%
-
+  margin: 0%;
+  padding: 0%;
 }
-.cardTitle{
+
+.iconsCard.mini{
+  background-color: #ffff ;
+  color: blue ;
+}
+
+.cardTitle.mini{
+  text-align: center;
   font-size: 18px;
   color: rgb(36, 36, 36);
+  height: 50px;
+  
 }
-.cardSubtitle{
+.cardSubtitle.mini{
   font-size: 13px;
+  height: 50px;
 }
-.accessButton{
+.accessButton.mini{
   background-color:  rgb(160, 206, 255) ;
   color:  rgb(0, 93, 193);
   font-family: "Inter";
   font-size: 0.95rem;
   font-weight: 600;
-  width: 50%;
+  width: 100%;
   height: 25%;
   border: 2px;
   border-radius: 2px;
