--- a/eptacss/src/App.css
+++ b/eptacss/src/App.css
@@ -34,13 +34,36 @@
   }
 }
 
+.header{
+  display: grid;
+  grid-template-columns: repeat(2, 70%);
+  justify-content: space-around;
+  height: 15vh;
+  background-color: #ffffff;
+  text-align: center;
+  align-items: center
+}
+.logo {
+  height: 10vh;
+}
+
+.menu{
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(4, 30%) ;
+  background-color: rgb(255, 255, 255);
+  color: #2f97ff;
+  align-items: right;
+  font-weight: 600;
+}
+
 .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-top: 0;
-  padding-top: 0;
+  padding-top: 7%;
   height: 100%;
   width: 100%;
   padding-bottom: 5%;
@@ -58,9 +81,15 @@
   max-width: 100%;
 }
 .container.third {
-  padding-top: 10%;
-  height: 80vh;
+  height: 60vh;
   max-width: 100%;
+  padding-bottom: 0%;
+  margin-bottom: 0%;
+  background-color: #f1f1f1;
+
+}
+
+.container.fourth{
 }
 
 .grid.cards {
@@ -143,6 +172,37 @@
   margin-right: 2%;
   margin-bottom: 0%;
   height: 50%;
+}
+
+
+
+/* teste accordions */
+.accordions{
+  width:600px;
+  margin:0 auto;
+  border:1px solid #ccc;
+}
+
+.accordion-item input{
+display:none;
+}
+.accordion-item label{
+  display:block;
+  border-bottom:1px solid #ccc;
+  cursor:pointer;
+padding:5px 3px;
+}
+.accordion-content{
+  height: 0px;
+  overflow: hidden;
+  -webkit-transition: height 0.3s ease-in-out;
+  -moz-transition: height 0.3s ease-in-out;
+  -o-transition: height 0.3s ease-in-out;
+  -ms-transition: height 0.3s ease-in-out;
+  transition: height 0.3s ease-in-out;
+}
+[id^=accordion]:checked ~ .accordion-content {
+  height: 100px;
 }
 
 @media (max-width: 700px) {
