--- a/eptacss/src/components/Card/index.css
+++ b/eptacss/src/components/Card/index.css
@@ -53,25 +53,25 @@
 .cardSubtitle{
   font-size: 13px;
 }
-.accessButton{
-  background-color:  rgb(160, 206, 255) ;
-  color:  rgb(0, 93, 193);
+.accessButton.main{
+  background-color:  rgb(48, 147, 253) ;
+  color:  rgb(255, 255, 255);
   font-family: "Inter";
-  font-size: 0.95rem;
+  font-size: 0.8rem;
   font-weight: 600;
-  width: 50%;
+  width: 40%;
   height: 25%;
   border: 2px;
   border-radius: 2px;
   border-color: #f3f2f2;
-  transition-duration: 0.3s;
+  transition-duration: 0.2s;
   /* box-shadow: 0px 4px 4px 2px #e0e0e0; */
   margin-top: 2%;
 
 }
 
 .accessButton:hover {
-  transition-duration: 0.3s;
+  transition-duration: 0.2s;
   background-color: rgb(47, 148, 255);
   color: #ffffff;
   cursor: pointer;
