--- a/eptacss/src/components/Extracard/index.css
+++ b/eptacss/src/components/Extracard/index.css
@@ -1,5 +1,6 @@
 
 .card.epta {
+  position: relative;
   padding: 8%;
   display: table;
   /* grid-template-columns: repeat(2, 15% 85%); */
@@ -17,6 +18,7 @@
 }
 
 .card.eventos {
+  position: relative;
   padding: 8%;
   padding-bottom: 0%;
   display: table;
