--- a/eptacss/src/App.css
+++ b/eptacss/src/App.css
@@ -7,7 +7,7 @@
 
   position: relative;
 }
-/* .header {
+/*app .header {
   position: absolute;
   background-color: #0073ff;
   height: 90px;
@@ -25,23 +25,30 @@
   padding-top: 0%;
   padding-bottom: 0%;
 }
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
+} */
+.App-header{
+  
+  position: relative;
+  max-width: 100vw;
+  width: 100%;
+  box-shadow: 2px 2px 20px rgb(162, 162, 162);
 }
 
 .header{
   display: grid;
-  grid-template-columns: repeat(2, 70%);
+  grid-template-columns: repeat(2, 30%);
   justify-content: space-around;
   height: 15vh;
   background-color: #ffffff;
   text-align: center;
-  align-items: center
+  align-items: center;
 }
 .logo {
   height: 10vh;
@@ -50,7 +57,7 @@
 .menu{
   display: grid;
   width: 100%;
-  grid-template-columns: repeat(4, 30%) ;
+  grid-template-columns: repeat(4, 32%) ;
   background-color: rgb(255, 255, 255);
   color: #2f97ff;
   align-items: right;
@@ -89,8 +96,6 @@
 
 }
 
-.container.fourth{
-}
 
 .grid.cards {
   display: flex;
@@ -202,7 +207,10 @@ padding:5px 3px;
   transition: height 0.3s ease-in-out;
 }
 [id^=accordion]:checked ~ .accordion-content {
-  height: 100px;
+  height: 100%;
+}
+.infoacordion{
+  height: 20%;
 }
 
 @media (max-width: 700px) {
