--- a/eptacss/src/App.css
+++ b/eptacss/src/App.css
@@ -256,13 +256,36 @@ padding:5px 3px;
 
 footer {
   /* height: 2px; */
+  display: grid;
+  grid-template-columns: repeat(2, 50%);
   width: 100%;
   background-color: rgb(0, 93, 193);
-  height: 30px;
-  position: absolute;
+  height: 15vh;
   bottom: 0;
+  align-items: center;
+  text-align: center;
+  color: white;
+
 }
 
+.icone1.face{
+  background-color: transparent;
+  color: white;
+  height: 8%;
+  width: 5%;
+}
+.icone1.insta{
+  background-color: transparent;
+  color: white;
+  height: 3%;
+  width: 5%;
+}
+.icone1.link{
+  background-color: transparent;
+  color: white;
+  height: 3%;
+  width: 5%;
+}
 .footerOptions {
   height: 10vh;
   display: flex;
