--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,7 @@
 
   position: relative;
 }
-/*app .header {
-  position: absolute;
-  background-color: #0073ff;
-  height: 90px;
-} */
+
 .App-logo {
   margin-top: 0%;
   margin-bottom: 10%;
@@ -19,31 +15,26 @@
   max-width: 100%;
   height: 70%;
   pointer-events: none;
-  background-color: #e1e1e1;
+  background-color: #ffffff;
   justify-content: left;
-  padding: 13%; 
+  padding: 13%;
   padding-top: 0%;
   padding-bottom: 0%;
 }
-/* @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
-.App-header{
-  
+
+.App-header {
+  display: flex;
+  flex-direction: row;
   position: relative;
   max-width: 100vw;
   width: 100%;
   box-shadow: 2px 2px 20px rgb(162, 162, 162);
+  padding: 2%;
+  align-items: center;
+  justify-content: space-between ;
 }
 
-.header{
-  display: grid;
-  grid-template-columns: repeat(2, 30%);
+.header {
   justify-content: space-around;
   height: 15vh;
   background-color: #ffffff;
@@ -54,16 +45,26 @@
   height: 10vh;
 }
 
-.menu{
-  display: grid;
-  width: 100%;
-  grid-template-columns: repeat(4, 32%) ;
-  background-color: rgb(255, 255, 255);
+.menu {
+  display: flex;
+  flex-direction: row;
+  width: 40%;
+  /* background-color: rgb(20, 11, 11); */
   color: #2f97ff;
-  align-items: right;
+  font-size: 1.3rem;
   font-weight: 600;
+  justify-content: space-around;
+  transition: 0.2s;
 }
+.link{
+  transition: 0.2s;
+}
+.link:hover{
+  color: #0069f3;
+  cursor: pointer;
+  transition: 1s;
 
+}
 .container {
   display: flex;
   flex-direction: column;
@@ -91,16 +92,13 @@
   height: 60vh;
   max-width: 100%;
   padding-bottom: 0%;
-  margin-bottom: 0%;
   background-color: #f1f1f1;
-
 }
-
 
 .grid.cards {
   display: flex;
   flex-flow: row wrap;
-  width: 75%;
+  width: 80%;
   justify-content: space-between;
   /* justify-content: space-evenly;
   height: 35%; */
@@ -113,13 +111,12 @@
   /* background-color: #0073ff; */
 }
 .grid.extracards {
-  display: grid;
-  grid-template-columns: repeat(2, 50%);
-  text-align: center;
-  width: 60%;
-  height: 70vh;
-  justify-content: space-between;
-  /* background-color: #0073ff; */
+  display: flex;
+  flex-direction: row;
+  width: 60%; 
+  align-items: center;
+  justify-content: space-around;
+  /* background-color: #090a0a; */
 }
 
 .title {
@@ -168,8 +165,6 @@
   justify-content: inherit;
   align-items: inherit;
   font-size: 0.78rem;
-  max-width: var(--max-width);
-  z-index: 2;
   font-family: var(--font-mono);
   text-align: left;
   margin-top: 0;
@@ -179,25 +174,23 @@
   height: 50%;
 }
 
-
-
 /* teste accordions */
-.accordions{
-  width:600px;
-  margin:0 auto;
-  border:1px solid #ccc;
+.accordions {
+  width: 600px;
+  margin: 0 auto;
+  border: 1px solid #ccc;
 }
 
-.accordion-item input{
-display:none;
+.accordion-item input {
+  display: none;
 }
-.accordion-item label{
-  display:block;
-  border-bottom:1px solid #ccc;
-  cursor:pointer;
-padding:5px 3px;
+.accordion-item label {
+  display: block;
+  border-bottom: 1px solid #ccc;
+  cursor: pointer;
+  padding: 5px 3px;
 }
-.accordion-content{
+.accordion-content {
   height: 0px;
   overflow: hidden;
   -webkit-transition: height 0.3s ease-in-out;
@@ -206,24 +199,38 @@ padding:5px 3px;
   -ms-transition: height 0.3s ease-in-out;
   transition: height 0.3s ease-in-out;
 }
-[id^=accordion]:checked ~ .accordion-content {
+[id^='accordion']:checked ~ .accordion-content {
   height: 100%;
 }
-.infoacordion{
+.infoacordion {
   height: 20%;
 }
 
 @media (max-width: 700px) {
   .App-logo {
-    margin-top: 60%;
-    height: 80px;
+    height: 30vh;
+    max-width: 126%;
+  }
+  .App-header{
+    max-height: 20vh;
+  }
+  .logo {
+    padding-top: 0;
+  }
+  .menu{
+    padding: 5%;
+    display: flex;
+    flex-direction: column;
+    }
+  .link{
+    font-size: 0.8rem;
   }
   .description {
     width: 85%;
     font-weight: 600;
     font-size: medium;
   }
-  .title {
+  .title.extra {
     height: 25%;
   }
 
@@ -233,12 +240,19 @@ padding:5px 3px;
 
   .grid.cards {
     flex-direction: column;
-
     margin-bottom: 0px;
     text-align: center;
     align-items: center;
     justify-content: space-around;
     margin-bottom: 20%;
+  }
+  .grid.extracards{
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+  }
+  .container.second{
+    height: 100%;
   }
   .center {
     padding: 8rem 0 6rem;
@@ -249,9 +263,25 @@ padding:5px 3px;
   .ButtonFooterOptions {
     padding-bottom: 30px;
   }
-  .footer {
+  .icone1.face {
     background-color: transparent;
+    color: white;
+    height: 18%;
+    width: 15%;
   }
+  .icone1.insta {
+    background-color: transparent;
+    color: white;
+    height: 10%;
+    width: 15%;
+  }
+  .icone1.link {
+    background-color: transparent;
+    color: white;
+    height: 13%;
+    width: 15%;
+  }
+  
 }
 
 footer {
@@ -265,22 +295,21 @@ footer {
   align-items: center;
   text-align: center;
   color: white;
-
 }
 
-.icone1.face{
+.icone1.face {
   background-color: transparent;
   color: white;
   height: 8%;
   width: 5%;
 }
-.icone1.insta{
+.icone1.insta {
   background-color: transparent;
   color: white;
   height: 3%;
   width: 5%;
 }
-.icone1.link{
+.icone1.link {
   background-color: transparent;
   color: white;
   height: 3%;
