--- a/src/components/Card/index.css
+++ b/src/components/Card/index.css
@@ -15,15 +15,15 @@
   width: 44vh;
   height: 22vh;
 }
-.icone1{
+.icone1.main{
   background-color: rgb(0, 93, 193);
   color: #f3f2f2;
   width: 100%;
   height: 100%;
-  border-radius: 11px;
+  border-radius: 11rem; 
 
 }
-.iconsCard{
+.iconsCard.main{
   /* background-color: rgb(0, 93, 193);
   width: 100%;
   height: 23%;
@@ -35,7 +35,7 @@
   background-color:rgb(0, 93, 193) ;
   width: 90%;
   height: 30%;
-  border-radius: 20px;
+  border-radius: 20rem;
 
 
 }
@@ -46,12 +46,12 @@
   margin: 0%
 
 }
-.cardTitle{
-  font-size: 18px;
+.cardTitle.main{
+  font-size: 1.5rem;
   color: rgb(36, 36, 36);
 }
-.cardSubtitle{
-  font-size: 13px;
+.cardSubtitle.main{
+  font-size: 1rem;
 }
 .accessButton.main{
   background-color:  rgb(48, 147, 253) ;
