--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
   max-width: 100%;
   height: 70%;
   pointer-events: none;
-  background-color: #ffffff;
+  background-color: #e1e1e1;
   justify-content: left;
   padding: 13%;
   padding-top: 0%;
