--- a/src/components/SearchBar/index.css
+++ b/src/components/SearchBar/index.css
@@ -48,11 +48,13 @@
 @media ( max-width: 700px) {
 
   .searchButton{
-    color: transparent;
-
+    overflow: hidden;
   }
   .bar{
     width: 80%;
+    height: 50%;
+    font-size:larger ;
+    border-radius: 11px 0 0 11px;
   }
   .content.search{
     width: 90%;
