--- a/src/components/Minicard/index.css
+++ b/src/components/Minicard/index.css
@@ -11,8 +11,8 @@
   /* transition: background 200ms, border 200ms; */
   text-align: center;
   align-items: center;
-  justify-content: space-between;
-  height: 60%;
+  justify-content: space-around;
+  height: 100%;
 }
 
 .content.mini {
@@ -30,13 +30,15 @@
   margin-top: 2%;
   background-color: transparent;
   color: blue;
+  font-size: 300%;
 }
 
 .cardTitle.mini {
+  margin-top: 5%;
   text-align: center;
   font-size: 18px;
   color: rgb(36, 36, 36);
-  height: 20%;
+  height: 25%;
 }
 .accessButton.mini {
   background-color: rgb(160, 206, 255);
