--- a/src/components/SearchBar/index.css
+++ b/src/components/SearchBar/index.css
@@ -1,3 +1,42 @@
+.cont.search{
+  display: flex;
+  flex-direction: row;
+  border: 1px solid rgb(192, 192, 192);
+  width: 90%;
+  height: 30%;
+  border-radius: 25px;
+  background-color: white;
+  align-items: center;  
+}
+.inp.search{
+  margin-left: 2%;
+  width: 94%;
+  height: 97%;
+  border-radius: 20px;
+  font-size: medium;
+  background-color: transparent;
+}
+ 
+.inp.search:focus{
+  outline: none;
+}
+
+.ico.search{
+  color: #3f9dfc;
+  font-size: 150%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 .content.search{
   margin-top: -16%;
@@ -7,7 +46,7 @@
   height: 20vh;
   background-color: rgb(250, 250, 250);
   align-items: center;
-  border: 1px solid;
+  border: 1px  solid;
   border-color: rgb(219, 219, 219);
   border-radius: 10px;
   text-align: center;  
@@ -20,23 +59,33 @@
   margin: 0;
   border: 1px solid;
   border-color: rgb(219, 219, 219);
-  border-radius: 4px 0px 0 4px;
+  border-radius: 25px 0px 0 25px;
   font-family: 'Inter';
   font-size: 90%;
   padding: 2%;
 }
 
+.barr{
+  width: 80%;
+}
+/* .bar{
+  border: 1px solid;
+} */
 .searchButton{
-  padding: 0%;
-  background-color: rgb(0, 93, 193);
-  color: white;
-  border-radius: 0 4px 4px 0;
-  width: 10%;
+  
+  padding: 1%;
+  padding-left: 0;
+  background-color: transparent;
+  color: #3f9dfc;
+  border-radius: 0 25px 25px 0;
+  border: 1px #d6d8da solid;
+  width: 5%;
   height: 32%;
   margin: 0;
   font-family: 'Inter';
-  font-size: 90%;
+  font-size: 10%;
   transition-duration: 0.5s;
+  ;
 }
 .searchButton:hover{
   background-color: rgb(0, 41, 225);
